src/TestParser.java
/* Generated By:JavaCC: Do not edit this line. TestParser.java */
import java.io.*;

public class TestParser implements TestParserConstants {
  public final static Namelist namelist = new Namelist();                                      // namelist to store var + func names
  public final static SymbolTable symboltable = new SymbolTable();               // symbol table to store symbol and scope information
  public final static CodeGen codegen = new CodeGen("test.txt");

  public static void main(String args []) throws ParseException, FileNotFoundException
  {
    String filename = "ATest.jus";
    File file = new File(filename);
    String path = file.getAbsolutePath();
    TestParser parser = new TestParser(new FileInputStream(path));
        //codegen.emitTest("Start Parsing");    try
    {
      switch (parser.parse())
      {
              case 0 :
                System.out.println("OK.");
                break;
              case 1 :
                System.out.println("Goodbye.");
                break;
              default :
                break;
            }
          }
          catch (Exception e)
          {
            System.out.println("NOK.");
            System.out.println(e.getMessage());
            parser.ReInit(System.in);
          }
          catch (Error e)
          {
            System.out.println("Oops.");
            System.out.println(e.getMessage());
          }
  }

  static final public int parse() throws ParseException {
    CompilationUnit();
    {if (true) return 0;}
    throw new Error("Missing return statement in function");
  }

  static final public void CompilationUnit() throws ParseException {
    Token token;
    Type type;
    Symbol s;
    jj_consume_token(PROGRAM);
    token = jj_consume_token(IDENT);
    namelist.add(token.image);
    s = new Symbol();
    s.name = token.image;
    s.kind = Symbol.Kind.progKind;
    s.level = symboltable.curLevel;
    symboltable.insert(s);
    //codegen.emitTest("Symbol = " + s.name + ", Level = " + s.level + ", Scope = " + symboltable.curScope);

          symboltable.enterScope();
    jj_consume_token(CURVEDBRACKETOPEN);
    Definition();
    jj_consume_token(CURVEDBRACKETCLOSE);
    symboltable.leaveScope();
  }

  static final public void Definition() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
      case INT:
      case BOOLEAN:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(3)) {
        VarDef();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
        case INT:
        case BOOLEAN:
          FuncDef();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void VarDef() throws ParseException {
        Token token;       // used to get and store variable name
        Type type;         // used to get and store type of variable
        Symbol s;
    type = Type();
    token = jj_consume_token(IDENT);
    namelist.add(token.image);
    s = new Symbol();
    s.type = type;
    s.name = token.image;
    s.kind = Symbol.Kind.varKind;
    s.level = symboltable.curLevel;
    symboltable.insert(s);
    //codegen.emitTest("Symbol = " + s.name + ", Level = " + s.level + ", Scope = " + symboltable.curScope);

    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASIGN:
      Init();
      if(s.level == 1) {     // global
        System.out.println("PUTSTATIC " + s.addr + " (" + s.name + ", ADDR " + s.addr + ")");
        codegen.emitTest("PUTSTATIC " + s.addr);
      }
      else {
        System.out.println("ISTORE " + s.addr + " (" + s.name + ", ADDR " + s.addr + ")");
        //System.out.println("ISTORE " + token.image);
        codegen.emitTest("ISTORE " + s.addr);
      }
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
  }

  static final public void Init() throws ParseException {
  Token token;
  Symbol sym;
    jj_consume_token(ASIGN);
    token = jj_consume_token(NUMBER);
    sym = new Symbol();
    sym.type = Type.INT;
    sym.name = token.image;
    sym.kind = Symbol.Kind.constKind;
    sym.level = symboltable.curLevel;
    if(symboltable.lookup(sym.name) == null) {
      symboltable.insert(sym);
      System.out.println("LDCW " + sym.addr + " (" + token.image + ", ADDR " + sym.addr + ")");
      codegen.emitTest("LDCW " + sym.addr);
    }
  }

  static final public Type Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      jj_consume_token(VOID);
                {if (true) return Type.VOID;}
      break;
    case INT:
      jj_consume_token(INT);
                {if (true) return Type.INT;}
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
                {if (true) return Type.BOOL;}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void FuncDef() throws ParseException {
    FuncHead();
    Block();
    symboltable.leaveScope();
  }

  static final public void FuncHead() throws ParseException {
        Token token;
        Type type;
        Symbol s;
    type = Type();
    token = jj_consume_token(IDENT);
    jj_consume_token(BRACEOPEN);
                namelist.add(token.image);
                s = new Symbol();
                s.type = type;
                s.name = token.image;
                s.kind = Symbol.Kind.funcKind;
                s.level = symboltable.curLevel;
                symboltable.insert(s);
                //codegen.emitTest("Symbol = " + s.name + ", Level = " + s.level + ", Scope = " + symboltable.curScope);

          symboltable.enterScope();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
    case INT:
    case BOOLEAN:
    case BYREF:
    case BYVAL:
      FormParList(s);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(BRACECLOSE);
  }

  static final public void FormParList(Symbol s) throws ParseException {
    Token token;
    Type type;
    Symbol sym;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BYREF:
    case BYVAL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BYREF:
        jj_consume_token(BYREF);
        break;
      case BYVAL:
        jj_consume_token(BYVAL);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    type = Type();
    token = jj_consume_token(IDENT);
                namelist.add(token.image);
                sym = new Symbol();
                sym.type = type;
                sym.name = token.image;
                sym.kind = Symbol.Kind.parKind;
                sym.level = symboltable.curLevel;
                if(s.symbols == null) {
                s.symbols = sym;
                //codegen.emitTest("Symbol = " + sym.name + ", Level = " + sym.level + ", Scope = " + symboltable.curScope);
                }
                else {
                        Symbol temp = s.symbols;
                    while(temp.next != null) {
                        temp = temp.next;
                    }
                        temp.next = sym;
                        //codegen.emitTest("Symbol = " + sym.name + ", Level = " + sym.level + ", Scope = " + symboltable.curScope);
                      }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BYREF:
      case BYVAL:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BYREF:
          jj_consume_token(BYREF);
          break;
        case BYVAL:
          jj_consume_token(BYVAL);
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      type = Type();
      token = jj_consume_token(IDENT);
        Symbol temp1 = s.symbols;
        while(temp1.next != null) {
            temp1 = temp1.next;
        }
        temp1.next = sym;
        //codegen.emitTest("Symbol = " + sym.name + ", Level = " + sym.level + ", Scope = " + symboltable.curScope);

    }
  }

  static final public void Block() throws ParseException {
    jj_consume_token(CURVEDBRACKETOPEN);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CURVEDBRACKETOPEN:
      case SEMICOLON:
      case VOID:
      case INT:
      case BOOLEAN:
      case IF:
      case WHILE:
      case RETURN:
      case IDENT:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
      case INT:
      case BOOLEAN:
        VarDef();
        break;
      case CURVEDBRACKETOPEN:
      case SEMICOLON:
      case IF:
      case WHILE:
      case RETURN:
      case IDENT:
        Stat();
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(CURVEDBRACKETCLOSE);
  }

  static final public void Stat() throws ParseException {
    if (jj_2_2(3)) {
      AssignStat();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        CallStat();
        break;
      case IF:
        IfStat();
        break;
      case WHILE:
        WhileStat();
        break;
      case RETURN:
        ReturnStat();
        break;
      case CURVEDBRACKETOPEN:
          symboltable.enterScope();
        Block();
          symboltable.leaveScope();
        break;
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void AssignStat() throws ParseException {
        Token token;
    token = jj_consume_token(IDENT);
    jj_consume_token(ASIGN);
    Expr();
    jj_consume_token(SEMICOLON);
    Symbol sym = symboltable.lookup(token.image);
    if(sym != null) {
         if(sym.level == 1) {   // global
            System.out.println("PUTSTATIC " + sym.addr + " (" + token.image + ", ADDR " + sym.addr + ")");
            codegen.emitTest("PUTSTATIC " + sym.addr);
         }
         else {
            System.out.println("ISTORE " + sym.addr + " (" + token.image + ", ADDR " + sym.addr + ")");
            codegen.emitTest("ISTORE " + sym.addr);
         }

    }
    // System.out.println("ISTORE " + token.image);

  }

  static final public void CallStat() throws ParseException {
    Call();
    jj_consume_token(SEMICOLON);
  }

  static final public void Call() throws ParseException {
    jj_consume_token(IDENT);
    jj_consume_token(BRACEOPEN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BRACEOPEN:
    case PLUS:
    case MINUS:
    case NOT:
    case IDENT:
    case NUMBER:
      ActParList();
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(BRACECLOSE);
  }

  static final public void ActParList() throws ParseException {
    Expr();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_4;
      }
      jj_consume_token(SEMICOLON);
      Expr();
    }
  }

  static final public void IfStat() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(BRACEOPEN);
    Expr();
    jj_consume_token(BRACECLOSE);
    Stat();
    if (jj_2_3(2)) {
      jj_consume_token(ELSE);
      Stat();
    } else {
      ;
    }
  }

  static final public void WhileStat() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(BRACEOPEN);
    Expr();
    jj_consume_token(BRACECLOSE);
    Stat();
  }

  static final public void ReturnStat() throws ParseException {
    jj_consume_token(RETURN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BRACEOPEN:
    case PLUS:
    case MINUS:
    case NOT:
    case IDENT:
    case NUMBER:
      Expr();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
  }

  static final public void Expr() throws ParseException {
    OrExpr();
  }

  static final public void OrExpr() throws ParseException {
    AndExpr();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
      jj_consume_token(OR);
      AndExpr();
    }
  }

  static final public void AndExpr() throws ParseException {
    RelExpr();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_6;
      }
      jj_consume_token(AND);
      RelExpr();
    }
  }

  static final public void RelExpr() throws ParseException {
    SimpleExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUALS:
    case NOTEQUALS:
    case LOWER:
    case LOWEROREQUAL:
    case GREATER:
    case GREATEROREQUAL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUALS:
        jj_consume_token(EQUALS);
        break;
      case NOTEQUALS:
        jj_consume_token(NOTEQUALS);
        break;
      case LOWER:
        jj_consume_token(LOWER);
        break;
      case LOWEROREQUAL:
        jj_consume_token(LOWEROREQUAL);
        break;
      case GREATER:
        jj_consume_token(GREATER);
        break;
      case GREATEROREQUAL:
        jj_consume_token(GREATEROREQUAL);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      SimpleExpr();
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
  }

  static final public void SimpleExpr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    Term();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Term();
    System.out.println("IADD");
    codegen.emitTest("IADD");
    }
  }

  static final public void Term() throws ParseException {
    NotFact();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
        jj_consume_token(MULTIPLY);
        break;
      case DIVIDE:
        jj_consume_token(DIVIDE);
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      NotFact();
    }
  }

  static final public void NotFact() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    Fact();
  }

  static final public void Fact() throws ParseException {
  Token token;
   Type type;
   Symbol sym;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
      token = jj_consume_token(NUMBER);
    sym = new Symbol();
    sym.type = Type.INT;
    sym.name = token.image;
    sym.kind = Symbol.Kind.constKind;
    sym.level = symboltable.curLevel;
    if(symboltable.lookup(sym.name) == null) {
      symboltable.insert(sym);
      System.out.println("LDCW " + sym.addr + " (" + token.image + ", ADDR " + sym.addr + ")");
      codegen.emitTest("LDCW " + sym.addr);
    }
      break;
    case IDENT:
      token = jj_consume_token(IDENT);
    Symbol s = symboltable.lookup(token.image);
    if(s != null) {
      if(s.level == 1) {        // global
        System.out.println("GETSTATIC " + s.addr + " (" + s.name + ", ADDR " + s.addr + ")");
        codegen.emitTest("GETSTATIC " + s.addr);
      }
      else {
        System.out.println("ILOAD " + s.addr + " (" + s.name + ", ADDR " + s.addr + ")");
        codegen.emitTest("ILOAD " + s.addr);
      }

    }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BRACEOPEN:
        jj_consume_token(BRACEOPEN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BRACEOPEN:
        case PLUS:
        case MINUS:
        case NOT:
        case IDENT:
        case NUMBER:
          ActParList();
          break;
        default:
          jj_la1[27] = jj_gen;
          ;
        }
        jj_consume_token(BRACECLOSE);
        break;
      default:
        jj_la1[28] = jj_gen;
        ;
      }
      break;
    case BRACEOPEN:
      jj_consume_token(BRACEOPEN);
      Expr();
      jj_consume_token(BRACECLOSE);
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_3R_18() {
    if (jj_3R_28()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_scan_token(IDENT)) return true;
    if (jj_scan_token(ASIGN)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_35() {
    if (jj_3R_36()) return true;
    return false;
  }

  static private boolean jj_3R_27() {
    if (jj_scan_token(WHILE)) return true;
    return false;
  }

  static private boolean jj_3R_40() {
    if (jj_scan_token(BRACEOPEN)) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_scan_token(ELSE)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_26() {
    if (jj_scan_token(IF)) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    if (jj_scan_token(BOOLEAN)) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_3R_29()) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_3R_23()) return true;
    return false;
  }

  static private boolean jj_3R_34() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(30)) {
    jj_scanpos = xsp;
    if (jj_scan_token(31)) return true;
    }
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_3R_27()) return true;
    return false;
  }

  static private boolean jj_3R_33() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_34()) jj_scanpos = xsp;
    if (jj_3R_35()) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_scan_token(8)) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3R_39() {
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

  static private boolean jj_3R_32() {
    if (jj_3R_33()) return true;
    return false;
  }

  static private boolean jj_3R_31() {
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_scan_token(VOID)) return true;
    return false;
  }

  static private boolean jj_3R_29() {
    if (jj_scan_token(CURVEDBRACKETOPEN)) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_3R_26()) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_3R_12()) return true;
    if (jj_scan_token(IDENT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_13()) jj_scanpos = xsp;
    if (jj_scan_token(SEMICOLON)) return true;
    return false;
  }

  static private boolean jj_3R_30() {
    if (jj_3R_32()) return true;
    return false;
  }

  static private boolean jj_3R_25() {
